--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <button class="toggle" id="theme-toggle">🌓</button>
 
     <div class="logo">
-      <img src="archi-logo.png" alt="Archi logo">
+      <img src="./archi-logo.png" alt="Archi Logo" style="height: 2.4rem;">
       <span>Archi</span>
     </div>
 
