--- a/index.html
+++ b/index.html
@@ -1,147 +1,90 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="auto">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archi – Silent AI Guardian</title>
-  <link rel="icon" href="/archi-logo.png" />
+  <link rel="icon" href="archi-logo.png" />
+
   <style>
-    :root {
-      --bg-light: #ffffff;
-      --bg-dark: #0e0e0e;
-      --text-light: #111;
-      --text-dark: #f1f1f1;
-    }
-
-    html[data-theme='dark'] {
-      background: var(--bg-dark);
-      color: var(--text-dark);
-    }
-
-    html[data-theme='light'] {
-      background: var(--bg-light);
-      color: var(--text-light);
-    }
-
     body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    .container {
+      font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh;
+      margin: 0;
+      background-color: white;
+      color: black;
+      transition: background-color 0.3s, color 0.3s;
       text-align: center;
-      padding: 2rem 1rem;
+      padding: 0 1rem;
     }
 
-    .logo {
-      display: flex;
-      align-items: center;
-      gap: 0.6rem;
-      font-size: 2.2rem;
-      font-weight: 600;
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #111;
+        color: white;
+      }
+
+      input, button {
+        background-color: #222;
+        color: white;
+        border-color: #333;
+      }
     }
 
-    .logo img {
-      height: 2.4rem;
+    img.logo {
+      height: 2.5rem;
+      margin-bottom: 0.5rem;
     }
 
-    .tagline {
-      margin: 0.3rem 0;
-      font-size: 1.1rem;
-      font-weight: 400;
+    input[type="email"] {
+      padding: 0.75rem 1rem;
+      width: 280px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin: 1rem 0;
     }
 
-    iframe {
-      width: 100%;
-      max-width: 420px;
-      height: 180px;
-      margin-top: 2rem;
+    button {
+      padding: 0.75rem 1.25rem;
+      background-color: black;
+      color: white;
       border: none;
-    }
-
-    footer {
-      margin-top: 3rem;
-      font-size: 0.85rem;
-      color: inherit;
-    }
-
-    footer a {
-      text-decoration: none;
-      color: inherit;
-      margin: 0 0.5rem;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    .toggle {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      padding: 0.4rem 0.8rem;
-      border-radius: 12px;
-      font-size: 0.9rem;
-      background: transparent;
-      border: 1px solid currentColor;
+      border-radius: 6px;
       cursor: pointer;
-      transition: background 0.3s;
+      font-weight: bold;
     }
 
-    .toggle:hover {
-      background: rgba(128, 128, 128, 0.1);
+    button:hover {
+      opacity: 0.9;
+    }
+
+    .footer {
+      margin-top: 2rem;
+      font-size: 0.75rem;
+      opacity: 0.6;
     }
   </style>
 </head>
+
 <body>
-  <div class="container">
-    <button class="toggle" id="theme-toggle">🌓</button>
 
-    <div class="logo">
-      <img src="./archi-logo.png" alt="Archi Logo" style="height: 2.4rem;">
-      <span>Archi</span>
-    </div>
+  <img src="archi-logo.png" alt="Archi Logo" class="logo" />
 
-    <p class="tagline">Touch nothing. Archi sees.</p>
-    <p class="tagline">Join the waitlist below for early access.</p>
+  <h1>Touch nothing. Archi sees.</h1>
+  <p>Join the waitlist below for early access.</p>
 
-    <iframe 
-      src="https://tally.so/embed/w2dMLJ?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" 
-      loading="lazy" 
-      allowtransparency="true">
-    </iframe>
+  <!-- Email Form (local dummy form, doesn't submit) -->
+  <form onsubmit="event.preventDefault(); alert('Submitted (test mode).');">
+    <input type="email" placeholder="Enter your email" required />
+    <br />
+    <button type="submit">Submit →</button>
+  </form>
 
-    <footer>
-      © 2025 Archi AI. All rights reserved.
-      <a href="/privacy.html">Privacy Policy</a> · 
-      <a href="/terms.html">Terms of Service</a>
-    </footer>
-  </div>
+  <div class="footer">© 2025 Archi AI. All rights reserved.</div>
 
-  <script>
-    // Auto-detect system theme
-    const root = document.documentElement;
-    const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-
-    const currentTheme = localStorage.getItem("archi-theme") || "auto";
-    if (currentTheme === "dark" || (currentTheme === "auto" && prefersDark)) {
-      root.setAttribute("data-theme", "dark");
-    } else {
-      root.setAttribute("data-theme", "light");
-    }
-
-    document.getElementById("theme-toggle").addEventListener("click", () => {
-      const current = root.getAttribute("data-theme");
-      const next = current === "dark" ? "light" : "dark";
-      root.setAttribute("data-theme", next);
-      localStorage.setItem("archi-theme", next);
-    });
-  </script>
 </body>
 </html>
