--- a/index.html
+++ b/index.html
@@ -7,31 +7,29 @@
   <link rel="icon" href="archi-logo.png" />
 
   <style>
+    :root {
+      color-scheme: light dark;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
+      justify-content: flex-start;
+      min-height: 100vh;
       margin: 0;
       background-color: white;
       color: black;
       transition: background-color 0.3s, color 0.3s;
       text-align: center;
-      padding: 0 1rem;
+      padding: 2rem 1rem;
     }
 
     @media (prefers-color-scheme: dark) {
       body {
         background-color: #111;
         color: white;
-      }
-
-      input, button {
-        background-color: #222;
-        color: white;
-        border-color: #333;
       }
     }
 
@@ -40,30 +38,22 @@
       margin-bottom: 0.5rem;
     }
 
-    input[type="email"] {
-      padding: 0.75rem 1rem;
-      width: 280px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin: 1rem 0;
+    .tagline {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
     }
 
-    button {
-      padding: 0.75rem 1.25rem;
-      background-color: black;
-      color: white;
+    iframe {
+      width: 100%;
+      max-width: 400px;
+      height: 250px;
       border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    button:hover {
-      opacity: 0.9;
+      border-radius: 8px;
+      overflow: hidden;
     }
 
     .footer {
-      margin-top: 2rem;
+      margin-top: 3rem;
       font-size: 0.75rem;
       opacity: 0.6;
     }
@@ -75,16 +65,26 @@
   <img src="archi-logo.png" alt="Archi Logo" class="logo" />
 
   <h1>Touch nothing. Archi sees.</h1>
-  <p>Join the waitlist below for early access.</p>
+  <p class="tagline">Join the waitlist below for early access.</p>
 
-  <!-- Email Form (local dummy form, doesn't submit) -->
-  <form onsubmit="event.preventDefault(); alert('Submitted (test mode).');">
-    <input type="email" placeholder="Enter your email" required />
-    <br />
-    <button type="submit">Submit →</button>
-  </form>
+  <!-- Tally Form Embed -->
+  <iframe
+    data-tally-src="https://tally.so/embed/wg6bAl?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+    loading="lazy"
+    width="100%"
+    height="250"
+    title="Archi Waitlist"
+  ></iframe>
+
+  <script>
+    const script = document.createElement("script");
+    script.src = "https://tally.so/widgets/embed.js";
+    script.defer = true;
+    document.body.appendChild(script);
+  </script>
 
   <div class="footer">© 2025 Archi AI. All rights reserved.</div>
 
 </body>
 </html>
+
