--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Archi – Silent AI Guardian</title>
   <link rel="icon" href="archi-logo.png" />
-
   <style>
     :root {
       color-scheme: light dark;
@@ -13,102 +12,120 @@
 
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Segoe UI', sans-serif;
       display: flex;
-      align-items: center;
-      justify-content: center;
       flex-direction: column;
-      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      text-align: center;
       background: white;
       color: black;
-      transition: background 0.3s ease, color 0.3s ease;
+      transition: background 0.3s, color 0.3s;
     }
 
     @media (prefers-color-scheme: dark) {
       body {
-        background: #111;
+        background: #0f0f0f;
         color: white;
       }
     }
 
-    input[type="email"] {
-      padding: 0.75rem;
+    h1 {
+      font-size: 2rem;
+      margin: 0.5rem;
+    }
+
+    p {
+      margin: 0.2rem 0 1.2rem;
       font-size: 1rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: center;
+    }
+
+    input[type="email"] {
+      padding: 0.75rem 1rem;
+      font-size: 1rem;
+      width: 300px;
       border: 1px solid #ccc;
-      border-radius: 4px;
-      min-width: 300px;
+      border-radius: 6px;
       background: transparent;
       color: inherit;
     }
 
+    input[type="email"]::placeholder {
+      color: #aaa;
+    }
+
     button {
-      margin-top: 1rem;
       padding: 0.75rem 1.5rem;
       background: black;
       color: white;
+      font-size: 1rem;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.2s;
     }
 
     button:hover {
       background: #444;
     }
 
-    .logo {
-      margin-bottom: 1rem;
-      height: 40px;
+    .tally-badge {
+      margin-top: 0.5rem;
+      font-size: 0.75rem;
+      color: #999;
     }
 
     .footer {
-      font-size: 0.75rem;
-      opacity: 0.6;
       margin-top: 2rem;
+      font-size: 0.8rem;
+      opacity: 0.7;
+    }
+
+    .footer a {
+      color: inherit;
+      text-decoration: none;
+      margin: 0 0.5rem;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
+
+    .logo {
+      font-size: 2.2rem;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-
-  <img src="archi-logo.png" alt="Archi" class="logo" />
-  <h1>Touch nothing. Archi sees.</h1>
+  <div class="logo">
+    Archi <img src="archi-logo.png" alt="Guardian Eye" style="height: 1em; vertical-align: middle;" />
+  </div>
+  <p><strong>Touch nothing. Archi sees.</strong></p>
   <p>Join the waitlist below for early access.</p>
 
-  <form id="waitlist-form">
-    <input type="email" id="email" placeholder="Enter your email" required />
-    <button type="submit">Submit</button>
+  <form action="https://tally.so/r/wg6bAl" method="POST" target="_blank">
+    <input type="email" name="email" placeholder="Email" required />
+    <button type="submit">Submit ➔</button>
   </form>
 
-  <div id="confirmation" style="display:none; margin-top:1rem;">✅ You're on the list.</div>
-
-  <div class="footer">
-    © 2025 Archi AI • <a href="privacy.html">Privacy</a> • <a href="terms.html">Terms</a>
+  <div class="tally-badge">
+    ✴ Made with <a href="https://tally.so" target="_blank" rel="noopener noreferrer">Tally</a>
   </div>
 
-  <script>
-    const form = document.getElementById('waitlist-form');
-    const emailInput = document.getElementById('email');
-    const confirmation = document.getElementById('confirmation');
-
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      const email = emailInput.value;
-
-      // Send to Tally via their form submission endpoint
-      await fetch('https://tally.so/r/wg6bAl', {
-        method: 'POST',
-        mode: 'no-cors',
-        headers: {
-          'Content-Type': 'application/x-www-form-urlencoded',
-        },
-        body: `email=${encodeURIComponent(email)}`
-      });
-
-      form.style.display = 'none';
-      confirmation.style.display = 'block';
-    });
-  </script>
-
+  <div class="footer">
+    © 2025 Archi AI. All rights reserved.
+    <br />
+    <a href="privacy.html">Privacy Policy</a> • <a href="terms.html">Terms of Service</a>
+  </div>
 </body>
 </html>
