--- a/index.html
+++ b/index.html
@@ -2,130 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Archi – Silent AI Guardian</title>
-  <link rel="icon" href="archi-logo.png" />
-  <style>
-    :root {
-      color-scheme: light dark;
-    }
-
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      text-align: center;
-      background: white;
-      color: black;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      body {
-        background: #0f0f0f;
-        color: white;
-      }
-    }
-
-    h1 {
-      font-size: 2rem;
-      margin: 0.5rem;
-    }
-
-    p {
-      margin: 0.2rem 0 1.2rem;
-      font-size: 1rem;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      align-items: center;
-    }
-
-    input[type="email"] {
-      padding: 0.75rem 1rem;
-      font-size: 1rem;
-      width: 300px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      background: transparent;
-      color: inherit;
-    }
-
-    input[type="email"]::placeholder {
-      color: #aaa;
-    }
-
-    button {
-      padding: 0.75rem 1.5rem;
-      background: black;
-      color: white;
-      font-size: 1rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-
-    button:hover {
-      background: #444;
-    }
-
-    .tally-badge {
-      margin-top: 0.5rem;
-      font-size: 0.75rem;
-      color: #999;
-    }
-
-    .footer {
-      margin-top: 2rem;
-      font-size: 0.8rem;
-      opacity: 0.7;
-    }
-
-    .footer a {
-      color: inherit;
-      text-decoration: none;
-      margin: 0 0.5rem;
-    }
-
-    .footer a:hover {
-      text-decoration: underline;
-    }
-
-    .logo {
-      font-size: 2.2rem;
-      font-weight: bold;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Archi</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="logo">
-    Archi <img src="archi-logo.png" alt="Guardian Eye" style="height: 1em; vertical-align: middle;" />
-  </div>
-  <p><strong>Touch nothing. Archi sees.</strong></p>
-  <p>Join the waitlist below for early access.</p>
+  <div class="container">
+    <h1>Archi <span class="icon">👁️</span></h1>
+    <p class="tagline">Touch nothing. Archi sees.</p>
+    <p class="subtext">Join the waitlist below for early access.</p>
+    
+    <form action="#" method="POST" id="waitlist-form">
+      <input type="email" name="email" placeholder="Enter your email" required />
+      <button type="submit">Submit ➝</button>
+    </form>
 
-  <form action="https://tally.so/r/wg6bAl" method="POST" target="_blank">
-    <input type="email" name="email" placeholder="Email" required />
-    <button type="submit">Submit ➔</button>
-  </form>
-
-  <div class="tally-badge">
-    ✴ Made with <a href="https://tally.so" target="_blank" rel="noopener noreferrer">Tally</a>
-  </div>
-
-  <div class="footer">
-    © 2025 Archi AI. All rights reserved.
-    <br />
-    <a href="privacy.html">Privacy Policy</a> • <a href="terms.html">Terms of Service</a>
+    <footer>
+      <p>&copy; 2025 Archi AI. All rights reserved.</p>
+      <a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a>
+    </footer>
   </div>
 </body>
 </html>
