--- a/index.html
+++ b/index.html
@@ -3,25 +3,137 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Archi</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <title>Archi — Silent AI Guardian</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    :root {
+      --bg: #ffffff;
+      --text: #000000;
+      --accent: #000000;
+      --button-bg: #000000;
+      --button-text: #ffffff;
+      --input-bg: #f5f5f5;
+    }
+
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --bg: #000000;
+        --text: #ffffff;
+        --accent: #ffffff;
+        --button-bg: #ffffff;
+        --button-text: #000000;
+        --input-bg: #1a1a1a;
+      }
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background-color: var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      height: 100vh;
+      padding: 20px;
+    }
+
+    .logo-title {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      font-size: 2.6rem;
+      font-weight: 600;
+      margin-bottom: 12px;
+    }
+
+    .logo-title img {
+      height: 36px;
+      width: auto;
+    }
+
+    .tagline {
+      font-size: 1.1rem;
+      opacity: 0.7;
+      margin-bottom: 24px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 12px;
+    }
+
+    input[type="email"] {
+      padding: 14px 18px;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      background: var(--input-bg);
+      color: var(--text);
+      width: 100%;
+      max-width: 320px;
+    }
+
+    button {
+      padding: 12px 24px;
+      font-size: 1rem;
+      background: var(--button-bg);
+      color: var(--button-text);
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: opacity 0.2s ease;
+    }
+
+    button:hover {
+      opacity: 0.85;
+    }
+
+    footer {
+      margin-top: 40px;
+      font-size: 0.9rem;
+      color: var(--text);
+      opacity: 0.6;
+    }
+
+    footer a {
+      color: var(--text);
+      text-decoration: underline;
+      margin: 0 6px;
+    }
+
+    footer a:hover {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Archi <span class="icon">👁️</span></h1>
-    <p class="tagline">Touch nothing. Archi sees.</p>
-    <p class="subtext">Join the waitlist below for early access.</p>
-    
-    <form action="#" method="POST" id="waitlist-form">
-      <input type="email" name="email" placeholder="Enter your email" required />
-      <button type="submit">Submit ➝</button>
-    </form>
-
-    <footer>
-      <p>&copy; 2025 Archi AI. All rights reserved.</p>
-      <a href="#">Privacy Policy</a> • <a href="#">Terms of Service</a>
-    </footer>
+  <div class="logo-title">
+    <span>Archi</span>
+    <img src="archi-logo.png" alt="Archi Logo" />
   </div>
+
+  <div class="tagline">
+    Touch nothing. Archi sees.
+  </div>
+
+  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+    <input type="email" name="email" placeholder="Your email" required />
+    <button type="submit">Join the Waitlist →</button>
+  </form>
+
+  <footer>
+    <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a><br>
+    &copy; 2025 Archi AI. All rights reserved.
+  </footer>
 </body>
 </html>
