--- a/index.html
+++ b/index.html
@@ -1,139 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Archi — Silent AI Guardian</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Archi – Silent AI Guardian</title>
   <style>
-    :root {
-      --bg: #ffffff;
-      --text: #000000;
-      --accent: #000000;
-      --button-bg: #000000;
-      --button-text: #ffffff;
-      --input-bg: #f5f5f5;
-    }
-
-    @media (prefers-color-scheme: dark) {
-      :root {
-        --bg: #000000;
-        --text: #ffffff;
-        --accent: #ffffff;
-        --button-bg: #ffffff;
-        --button-text: #000000;
-        --input-bg: #1a1a1a;
-      }
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background-color: var(--bg);
-      color: var(--text);
+      margin: 0;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      background-color: #ffffff;
+      color: #000000;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      text-align: center;
       height: 100vh;
+      text-align: center;
       padding: 20px;
     }
 
     .logo-title {
       display: flex;
       align-items: center;
-      gap: 12px;
-      font-size: 2.6rem;
-      font-weight: 600;
-      margin-bottom: 12px;
+      gap: 10px;
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #000000;
     }
 
     .logo-title img {
-      height: 36px;
-      width: auto;
+      width: 40px; /* Adjust to logo size */
+      height: auto;
     }
 
-    .tagline {
-      font-size: 1.1rem;
-      opacity: 0.7;
-      margin-bottom: 24px;
+    p {
+      margin-top: 1rem;
+      font-size: 1.2rem;
     }
 
     form {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
+      margin-top: 2rem;
     }
 
     input[type="email"] {
-      padding: 14px 18px;
+      padding: 12px;
       font-size: 1rem;
+      width: 300px;
       border: 1px solid #ccc;
-      border-radius: 8px;
-      background: var(--input-bg);
-      color: var(--text);
-      width: 100%;
-      max-width: 320px;
+      border-radius: 6px;
+      margin-bottom: 1rem;
     }
 
     button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background: var(--button-bg);
-      color: var(--button-text);
+      background-color: #007bff;
+      color: white;
       border: none;
-      border-radius: 8px;
+      padding: 12px 20px;
+      border-radius: 6px;
+      font-size: 1rem;
       cursor: pointer;
-      transition: opacity 0.2s ease;
     }
 
-    button:hover {
-      opacity: 0.85;
-    }
-
-    footer {
-      margin-top: 40px;
+    .footer {
+      margin-top: 3rem;
       font-size: 0.9rem;
-      color: var(--text);
-      opacity: 0.6;
+      color: #666;
     }
 
-    footer a {
-      color: var(--text);
+    .footer a {
+      color: #007bff;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+
+    .footer a:hover {
       text-decoration: underline;
-      margin: 0 6px;
     }
 
-    footer a:hover {
-      opacity: 1;
-    }
   </style>
 </head>
 <body>
   <div class="logo-title">
     <span>Archi</span>
-    <img src="archi-logo.png" alt="Archi Logo" />
+    <img src="archi-logo.png" alt="Archi Logo">
   </div>
 
-  <div class="tagline">
-    Touch nothing. Archi sees.
-  </div>
+  <p>Touch nothing. Archi sees.</p>
+  <p><strong>Website in development.</strong><br>Join the waitlist below.</p>
 
-  <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
-    <input type="email" name="email" placeholder="Your email" required />
+  <form action="https://tally.so/r/your-form-id" method="POST">
+    <input type="email" name="email" placeholder="Email" required>
     <button type="submit">Join the Waitlist →</button>
   </form>
 
-  <footer>
-    <a href="/privacy.html">Privacy Policy</a> · <a href="/terms.html">Terms of Service</a><br>
-    &copy; 2025 Archi AI. All rights reserved.
-  </footer>
+  <div class="footer">
+    © 2025 Archi AI. All rights reserved.
+    <br>
+    <a href="#">Privacy Policy</a> · <a href="#">Terms of Service</a>
+  </div>
 </body>
 </html>
